# puffer-drone-swarm

./: .gitignore  MODEL_LOG.md  OPTIMIZATION.md  README.md  ROADMAP.md  bench_env.py  configs.py  drone_swarm_binding.c  drone_swarm_binding.pyx  env.py  env_config.py  eval.py  legacy_env.py  main.py  policy.py  project.md  puffer_drone_swarm.py  pyproject.toml  setup.py  train.py  training_log.txt  visualize.py
baselines/: __init__.py  base.py  benchmark.py  lawnmower.py  random_walk.py  voronoi.py
c_src/: binding.c  drone_swarm.c  drone_swarm.h  drone_swarm_demo.c  drone_swarm_render.h
docs/: ROADMAP.md  project.md
drone_swarm/: __init__.py
examples/: bench_env.py  eval.py  main.py  render_policy.py  train.py
legacy/: __init__.py  visualize.py
